--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,17 +21,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/equipid"
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="20dp"
-                android:text="Hai, BP Maintenance"
-                android:textSize="20dp"
-                tools:layout_editor_absoluteX="30dp"
-                tools:layout_editor_absoluteY="34dp" />
-
             <TableRow>
 
                 <ImageView
@@ -39,16 +28,25 @@
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_marginLeft="30dp"
-                    android:layout_marginTop="30dp"
-                    android:src="@drawable/profil"
-                    tools:layout_editor_absoluteX="20dp"
-                    tools:layout_editor_absoluteY="73dp" />
+                    android:layout_marginTop="15dp"
+                    android:src="@drawable/profil"/>
+
+                <TextView
+                    android:id="@+id/equipid"
+                    android:layout_width="230dp"
+                    android:layout_height="30dp"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginTop="20dp"
+                    android:text="Hai, BP Maintenance"
+                    android:textSize="20dp"/>
+
+
+            </TableRow>
 
                 <Button
                     android:id="@+id/ScannerBtn"
-                    android:layout_width="300dp"
+                    android:layout_width="match_parent"
                     android:layout_height="80dp"
-                    android:layout_marginLeft="30dp"
                     android:layout_marginTop="10dp"
                     android:backgroundTint="@color/white"
                     android:text="Scan Qr code"
@@ -58,8 +56,6 @@
                     app:iconTint="@color/black"
                     tools:layout_editor_absoluteX="100dp"
                     tools:layout_editor_absoluteY="127dp" />
-            </TableRow>
-
 
             <androidx.fragment.app.FragmentContainerView
                 android:id="@+id/fragment_container_view"
