--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,7 +53,7 @@
                     android:textColor="@color/black"
                     android:textSize="20dp"
                     app:icon="@drawable/ic_baseline_qr_code_scanner_24"
-                    app:iconTint="@color/black"
+                    app:iconTint="@null"
                     tools:layout_editor_absoluteX="100dp"
                     tools:layout_editor_absoluteY="127dp" />
 
